; ModuleID = '/home/carl/AnghaBench/git/extr_notes.c_prune_notes_helper.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes.c_prune_notes_helper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.note_delete_list = type { i32, %struct.note_delete_list* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, %struct.object_id*, i8*, i8*)* @prune_notes_helper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prune_notes_helper(%struct.object_id* %0, %struct.object_id* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca %struct.object_id*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.note_delete_list**, align 8
  %11 = alloca %struct.note_delete_list*, align 8
  store %struct.object_id* %0, %struct.object_id** %6, align 8
  store %struct.object_id* %1, %struct.object_id** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = bitcast i8* %12 to %struct.note_delete_list**
  store %struct.note_delete_list** %13, %struct.note_delete_list*** %10, align 8
  %14 = load %struct.object_id*, %struct.object_id** %6, align 8
  %15 = call i64 @has_object_file(%struct.object_id* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %32

18:                                               ; preds = %4
  %19 = call i64 @xmalloc(i32 16)
  %20 = inttoptr i64 %19 to %struct.note_delete_list*
  store %struct.note_delete_list* %20, %struct.note_delete_list** %11, align 8
  %21 = load %struct.note_delete_list**, %struct.note_delete_list*** %10, align 8
  %22 = load %struct.note_delete_list*, %struct.note_delete_list** %21, align 8
  %23 = load %struct.note_delete_list*, %struct.note_delete_list** %11, align 8
  %24 = getelementptr inbounds %struct.note_delete_list, %struct.note_delete_list* %23, i32 0, i32 1
  store %struct.note_delete_list* %22, %struct.note_delete_list** %24, align 8
  %25 = load %struct.object_id*, %struct.object_id** %6, align 8
  %26 = getelementptr inbounds %struct.object_id, %struct.object_id* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.note_delete_list*, %struct.note_delete_list** %11, align 8
  %29 = getelementptr inbounds %struct.note_delete_list, %struct.note_delete_list* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 8
  %30 = load %struct.note_delete_list*, %struct.note_delete_list** %11, align 8
  %31 = load %struct.note_delete_list**, %struct.note_delete_list*** %10, align 8
  store %struct.note_delete_list* %30, %struct.note_delete_list** %31, align 8
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %18, %17
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i64 @has_object_file(%struct.object_id*) #1

declare dso_local i64 @xmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
